# obs-pptlink

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json
.github/actions/build-plugin/: action.yaml
.github/actions/package-plugin/: action.yaml
.github/actions/run-clang-format/: action.yaml
.github/scripts/: Package-Windows.ps1
.github/workflows/: build-project.yaml  check-format.yaml  push.yaml
build-aux/: .run-format.zsh
cmake/common/: osconfig.cmake
cmake/windows/: defaults.cmake  helpers.cmake
cmake/windows/resources/: installer.iss.in
data/locale/: en-US.ini
src/: hotkeys.cpp  hotkeys.h  plugin-main.cpp
src/com-bridge/: ppt-com-bridge.cpp  ppt-com-bridge.h
src/docks/: dock-next-slide.cpp  dock-next-slide.h  dock-notes.cpp  dock-notes.h
src/sources/: source-presenter.cpp  source-presenter.h  source-slide.cpp  source-slide.h
src/wgc-capture/: wgc-capture.cpp  wgc-capture.h  wgc-frame-pool.cpp  wgc-frame-pool.h
